definicion de textarea a los mapas mentales

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
@@ -98,7 +98,8 @@
                                                  id="uno"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"
+                                                 pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="uno" styleClass="mensaje-alerta-11"/>
@@ -108,7 +109,8 @@
                                                  id="dos"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"
+                                                 pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="dos" styleClass=""/>
@@ -118,7 +120,8 @@
                                                  id="tres"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"
+                                                 pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="tres" styleClass=""/>
@@ -128,7 +131,8 @@
                                                  id="seis"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"
+                                                 pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="seis" styleClass=""/>
@@ -138,7 +142,8 @@
                                                  id="cinco"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"
+                                                 pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="cinco" styleClass=""/>
@@ -148,7 +153,8 @@
                                                  id="cuatro"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"
+                                                 pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="cuatro" styleClass=""/>
@@ -158,7 +164,8 @@
                                                  id="siete"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}"
+                                                 pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="siete" styleClass=""/>
@@ -168,7 +175,8 @@
                                                  id="ocho"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}"
+                                                 pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="ocho" styleClass=""/>
@@ -178,7 +186,8 @@
                                                  id="nueve"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
                                                  value="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
-                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].pregunta}">
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].pregunta}"
+                                                 pt:maxlength="120">
                                     <f:validateRequired/>
                                 </h:inputTextarea>
                                 <h:message for="nueve" styleClass=""/>
