--- a/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
@@ -85,7 +85,8 @@
                                     <h:inputText id="unod"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}">
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
+                                                 pt:maxlength="28">
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="unod" styleClass="mensaje-alerta-12"/>
@@ -93,7 +94,8 @@
                                 <h:inputText id="seisd"
                                              pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                                             value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                             pt:maxlength="28">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="seisd" styleClass="mensaje-alerta-12"/>
@@ -103,7 +105,8 @@
                                     <h:inputText id="dosd"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}">
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
+                                                 pt:maxlength="28">
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="dosd" styleClass="mensaje-alerta-12"/>
@@ -112,7 +115,8 @@
                                     <h:inputText id="sieted"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}">
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                                 pt:maxlength="28">
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="sieted" styleClass="mensaje-alerta-12"/>
@@ -121,7 +125,8 @@
                                     <h:inputText id="tresd"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}">
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
+                                                 pt:maxlength="28">
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="tresd" styleClass="mensaje-alerta-12"/>
@@ -130,7 +135,8 @@
                                     <h:inputText id="ochod"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}">
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                                 pt:maxlength="28">
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="ochod" styleClass="mensaje-alerta-12"/>
@@ -139,7 +145,8 @@
                                     <h:inputText id="cuatrod"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}">
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
+                                                 pt:maxlength="28">
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="cuatrod" styleClass="mensaje-alerta-12"/>
@@ -148,7 +155,8 @@
                                     <h:inputText id="nueved"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}">
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                                 pt:maxlength="28">
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="nueved" styleClass="mensaje-alerta-12"/>
@@ -157,7 +165,8 @@
                                     <h:inputText id="cincod"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}">
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}"
+                                                 pt:maxlength="28">
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="cincod" styleClass="mensaje-alerta-12"/>
@@ -166,7 +175,8 @@
                                     <h:inputText id="diezd"
                                                  pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"
                                                  disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}">
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                                 pt:maxlength="28">
                                         <f:validateRequired/>
                                     </h:inputText>
                                     <h:message for="diezd" styleClass="mensaje-alerta-12"/>
