--- a/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
@@ -4,7 +4,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <f:metadata>
         <f:viewParam name="cardinalidad" value="#{mapaMentalControlador.cardinalidad}" required="true"/>
@@ -88,35 +89,40 @@
                         <h:inputTextarea id="texto-respuesta-1"
                                          styleClass="caja1"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                         pt:maxlength="65">
                             <f:validateRequired/>
                         </h:inputTextarea>
                         <h:message for="texto-respuesta-1" styleClass=""/>
                         <h:inputTextarea id="texto-respuesta-2"
                                          styleClass="caja2"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}">
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                         pt:maxlength="65">
                             <f:validateRequired/>
                         </h:inputTextarea>
                         <h:message for="texto-respuesta-2" styleClass=""/>
                         <h:inputTextarea id="texto-respuesta-3"
                                          styleClass="caja3"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}">
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                         pt:maxlength="65">
                             <f:validateRequired/>
                         </h:inputTextarea>
                         <h:message for="texto-respuesta-3" styleClass=""/>
                         <h:inputTextarea id="texto-respuesta-4"
                                          styleClass="caja4"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}">
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                         pt:maxlength="65">
                             <f:validateRequired/>
                         </h:inputTextarea>
                         <h:message for="texto-respuesta-4" styleClass=""/>
                         <h:inputTextarea id="texto-respuesta-5"
                                          styleClass="caja5"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}">
+                                         value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                         pt:maxlength="65">
                             <f:validateRequired/>
                         </h:inputTextarea>
                         <h:message for="texto-respuesta-5" styleClass=""/>
