--- a/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
@@ -87,7 +87,8 @@
                                              id="facta"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="facta" styleClass=""/>
@@ -96,7 +97,8 @@
                                              id="factb"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="factb" styleClass=""/>
@@ -105,7 +107,8 @@
                                              id="factc"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="factc" styleClass=""/>
@@ -114,7 +117,8 @@
                                              id="factd"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="factd" styleClass=""/>
@@ -123,7 +127,8 @@
                                              id="facte"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="facte" styleClass=""/>
@@ -132,7 +137,8 @@
                                              id="factf"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="factf" styleClass=""/>
@@ -141,7 +147,8 @@
                                              id="factg"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="35">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="factg" styleClass=""/>
@@ -155,7 +162,8 @@
                                              id="opiniona"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="opiniona" styleClass=""/>
@@ -164,7 +172,8 @@
                                              id="opinionb"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="opinionb" styleClass=""/>
@@ -173,7 +182,8 @@
                                              id="opinionc"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[9].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="opinionc" styleClass=""/>
@@ -182,7 +192,8 @@
                                              id="opiniond"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[10].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[10].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="opiniond" styleClass=""/>
@@ -191,7 +202,8 @@
                                              id="opinione"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[11].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[11].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="opinione" styleClass=""/>
@@ -200,7 +212,8 @@
                                              id="opinionf"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[12].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[12].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="opinionf" styleClass=""/>
@@ -209,7 +222,8 @@
                                              id="opiniong"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[13].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[13].respuesta}"
-                                             pt:placeholder="Some text...">
+                                             pt:placeholder="Some text..."
+                                             pt:maxlength="45">
                                     <f:validateRequired/>
                                 </h:inputText>
                                 <h:message for="opiniong" styleClass=""/>
