--- a/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
@@ -91,7 +91,8 @@
                                          id="introduction"
                                          disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
                                          value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
-                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
+                                         pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}"
+                                         pt:maxlength="31">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h3 class="uk-text-center margen-small uk-text-capitalize">#{alumno['mindmap.map8.title.supporting']}:</h3>
@@ -100,7 +101,8 @@
                                              id="deails1"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}"
+                                             pt:maxlength="31">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="deails2" styleClass=""/>
@@ -108,7 +110,8 @@
                                              id="deails2"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}"
+                                             pt:maxlength="31">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="deails3" styleClass=""/>
@@ -116,7 +119,8 @@
                                              id="deails3"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}"
+                                             pt:maxlength="31">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h3 class="uk-text-center uk-margin-remove-top">#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}:</h3>
@@ -125,7 +129,8 @@
                                              id="Conclusion"
                                              disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                              value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
-                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
+                                             pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}"
+                                             pt:maxlength="31">
                                 <f:validateRequired/>
                             </h:inputTextarea>
                             <h:message for="Conclusion" styleClass=""/>
